@@ -68,6 +68,7 @@ Bug Fixes::
 * support internal link on image (value of link attribute starts with #) (#2572)
 * don't orphan section with unbreakable option that spans page boundary (#2608)
 * correctly track start page number of section title that self-advances when section is breakable (#2609)
+* fix incorrect spacing between entries in horizontal dlist when entry description crosses page boundary (#2614)
 
 Compliance::
 
